--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     </head>
 
     <body>
-    <div id="app">
-    </div>
+    <liquid-swap-widget></liquid-swap-widget>
     <script type="module" src="/main.ts"></script>
     </body>
 </html>
