--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
 
     <body>
-    <liquid-swap-widget></liquid-swap-widget>
+    <liquid-swap-widget id="liquidswap-widget"></liquid-swap-widget>
     <script type="module" src="/main.ts"></script>
     </body>
 </html>
