feat(widget): APT-986 setup deploy

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-        <link rel="manifest" href="public/site.webmanifest?v=2">
-        <link rel="shortcut icon" href="public/favicon.ico?v=2">
+        <link rel="manifest" href="site.webmanifest?v=2">
+        <link rel="shortcut icon" href="favicon.ico?v=2">
         <title>Liquidswap Widget</title>
     </head>
 
     <body>
     <liquid-swap-widget id="liquidswap-widget"></liquid-swap-widget>
-    <script type="module" src="/main.ts"></script>
+    <script type="module" src="./main.ts"></script>
     </body>
 </html>
