--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
 
     <body>
-    <liquid-swap-widget id="liquidswap-widget"></liquid-swap-widget>
+    <liquid-swap-widget></liquid-swap-widget>
     <script type="module" src="./main.ts"></script>
     </body>
 </html>
