--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 
     <body>
     <liquidswap-widget></liquidswap-widget>
-    <script type="module" src="index.ts"></script>
+    <script type="module" src="./index.ts"></script>
     </body>
 </html>
